--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="section_code">
 		<h4>Code:</h4>
 		<pre>
-&lt;script type="text/javascript" src="jquery.instagramFeed.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
 	(function($){
 		$(window).on('load', function(){
@@ -68,7 +68,7 @@
 	<div class="section_code">
 		<h4>Code:</h4>
 		<pre>
-&lt;script type="text/javascript" src="jquery.instagramFeed.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
 	(function($){
 		$(window).on('load', function(){
@@ -100,7 +100,7 @@
 	<div class="section_code">
 		<h4>Code:</h4>
 		<pre>
-&lt;script type="text/javascript" src="jquery.instagramFeed.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
 	(function($){
 		$(window).on('load', function(){
@@ -149,7 +149,7 @@
 	<div class="section_code">
 		<h4>Code:</h4>
 		<pre>
-&lt;script type="text/javascript" src="jquery.instagramFeed.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
 	(function($){
 		$(window).on('load', function(){
@@ -254,7 +254,7 @@
 	<div class="section_code">
 		<h4>Code:</h4>
 		<pre>
-&lt;script type="text/javascript" src="jquery.instagramFeed.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
 	(function($){
 		$(window).on('load', function(){
@@ -279,7 +279,7 @@
 	</div>
 </div>
 
-	<script type="text/javascript" src="jquery.instagramFeed.js"></script>
+	<script type="text/javascript" src="jquery.instagramFeed.min.js"></script>
 	<script type="text/javascript">
 		(function($){
 			$(window).on('load', function(){
