Instagram CORS workarround

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--
+ * jquery.instagramFeed
+ *
+ * @version 1.1
+ *
+ * @author Javier Sanahuja Liebana <bannss1@gmail.com>
+ *
+ * https://github.com/jsanahuja/jquery.instagramFeed
+ *
+ *-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
@@ -28,7 +38,7 @@
 	<body>
 <div>
 	<div class="section_title">
-		<h1><a href="https://github.com/BanNsS1/jquery.instagramFeed">jquery.instagramFeed</a></h1>
+		<h1><a href="https://github.com/jsanahuja/jquery.instagramFeed">jquery.instagramFeed</a></h1>
 		<h3>Default feed styling</h3>
 		<h4>Don't like it? Keep scrolling</h4>
 	</div>
@@ -275,7 +285,7 @@
 <div>
 	<div class="section_title">
 		<h3>Still not enough?</h3>
-		<h4 class="big"><a href="https://github.com/BanNsS1/jquery.instagramFeed">Send your request or just fork!</a></h4>
+		<h4 class="big"><a href="https://github.com/jsanahuja/jquery.instagramFeed">Send your request or just fork!</a></h4>
 	</div>
 </div>
 
