--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * jquery.instagramFeed
  *
- * @version 1.1
+ * @version 1.2
  *
  * @author Javier Sanahuja Liebana <bannss1@gmail.com>
  *
@@ -286,10 +286,10 @@
 <div>
 	<div class="section_title">
 		<h3>CORS</h3>
-		<h4>Instagram recently changed their CORS policy</h4>
+		<h4>Instagram CORS policy could change again</h4>
 	</div>
 	<div class="instagram_feed info">
-		<p>This CORS change broke the entire functionality of this library. Fortunately we have been able to get it back to work using a proxy (a <a href="https://cors-anywhere.herokuapp.com/" target="_blank">live implementation</a> of the <a href="https://github.com/Rob--W/cors-anywhere" target="_blank">cors-anywhere project</a>). With that comes the possible need of <strong>setting up your own proxy</strong> for performance reasons. I am not going to explain how can you do that, there is a bunch of information in <a href="https://github.com/Rob--W/cors-anywhere/blob/master/README.md" target="blank">the project readme</a>. You can also use other implementations of this as long as you use them server side. Navigators will block any try of bypassing this in the frontend.</p>
+		<p>Preventing a future Instagram's CORS policy changes we have left the functionality of using a proxy. The following example is how would we use an <a href="https://cors-anywhere.herokuapp.com/" target="_blank">implementation</a> of the <a href="https://github.com/Rob--W/cors-anywhere" target="_blank">cors-anywhere project</a>. With that would come the need of <strong>setting up your own proxy</strong> for performance reasons. I am not going to explain how can you do that, there is a bunch of information in <a href="https://github.com/Rob--W/cors-anywhere/blob/master/README.md" target="blank">the project readme</a>. You can also use other implementations of this as long as you use them server side. Browsers will block any try of bypassing this in the frontend, they care about CORS.</p>
 	</div>
 	<div class="section_code">
 		<h4>Code:</h4>
@@ -299,7 +299,8 @@
 	(function($){
 		$(window).on('load', function(){
 			$.instagramFeed({
-				<strong>'cors_proxy': "https://cors-anywhere.herokuapp.com/https://www.instagram.com/",</strong>
+				'host': "https://www.instagram.com/", <strong>// Default</strong>
+				//'host': "https://cors-anywhere.herokuapp.com/https://www.instagram.com/", <strong>// Cors Workaround</strong>
 				...
 			});
 		});
@@ -324,7 +325,6 @@
 		(function($){
 			$(window).on('load', function(){				
 				$.instagramFeed({
-					'cors_proxy': "https://cors-anywhere.herokuapp.com/https://www.instagram.com/",
 					'username': 'instagram',
 					'container': "#instagram-feed1",
 					'display_profile': true,
