--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 	(function($){
 		$(window).on('load', function(){
 			$.instagramFeed({
-				'username': 'github',
-				'container': "#instagram-feed2",
+				'username': 'fcbarcelona',
+				'container': "#instagram-feed4",
 				'display_profile': false,
 				'display_biography': false,
 				'display_gallery': false,
