--- a/index.html
+++ b/index.html
@@ -426,9 +426,13 @@
     &lt;a href=&quot;https://www.instagram.com/p/Bh-P3IoDxyB&quot; rel=&quot;noopener&quot; target=&quot;_blank&quot;&gt;
         &lt;img src=&quot;...&quot; alt=&quot;instagram instagram image 0&quot; /&gt;
     &lt;/a&gt;
-    .
-    .
-    .
+    ...
+&lt;/div&gt;
+&lt;div class=&quot;<strong>instagram_igtv</strong>&quot;&gt;
+    &lt;a href=&quot;https://www.instagram.com/p/Bh-P3IoDxyB&quot; rel=&quot;noopener&quot; target=&quot;_blank&quot;&gt;
+        &lt;img src=&quot;...&quot; alt=&quot;instagram instagram image 0&quot; /&gt;
+    &lt;/a&gt;
+    ...
 &lt;/div&gt;
                         </pre>
                     </div>
@@ -532,7 +536,10 @@
                 "is_video": false
             }
         },
-        ......
+        ...
+    ],
+    "igtv":[
+        ... (Mostly same structure as image.)
     ]
 }
                         </pre>
@@ -623,7 +630,21 @@
                     'items_per_row': 6,
                     'margin': 0.25
                 });
-
+                $.instagramFeed({
+                    'username': 'fcbarcelona',
+                    'container': "#instagram-feed4",
+                    'display_profile': false,
+                    'display_biography': false,
+                    'display_gallery': false,
+                    'display_igtv': true,
+                    'get_raw_json': false,
+                    'callback': null,
+                    'styling': true,
+                    'items': 8,
+                    'items_per_row': 4,
+                    'margin': 1
+                });
+                
                 // Show back to top button if distance from top > 0
                 $(window).scroll(function () { 
                     var elementTop = $('#footer').offset().top + 40;
