--- a/index.html
+++ b/index.html
@@ -532,7 +532,10 @@
                 "is_video": false
             }
         },
-        ......
+        ...
+    ],
+    "igtv":[
+        ... (Mostly same structure as image.)
     ]
 }
                         </pre>
@@ -623,7 +626,21 @@
                     'items_per_row': 6,
                     'margin': 0.25
                 });
-
+                $.instagramFeed({
+                    'username': 'fcbarcelona',
+                    'container': "#instagram-feed4",
+                    'display_profile': false,
+                    'display_biography': false,
+                    'display_gallery': false,
+                    'display_igtv': true,
+                    'get_raw_json': false,
+                    'callback': null,
+                    'styling': true,
+                    'items': 8,
+                    'items_per_row': 4,
+                    'margin': 1
+                });
+                
                 // Show back to top button if distance from top > 0
                 $(window).scroll(function () { 
                     var elementTop = $('#footer').offset().top + 40;
