--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
         crossorigin="anonymous"></script>
+		
+    <script src="https://www.sowecms.com/demos/statics/prism.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://www.sowecms.com/demos/statics/prism.css">
 
     <style>
 
@@ -62,16 +65,6 @@
             flex-grow: 1;
         }
 
-        #examples pre {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            background: #777;
-            color: #CCC;
-            border: 1px #555 solid;
-            padding: .25rem!important;
-        }
-
         #btn-top {
             position: fixed;
             z-index: 999;
@@ -98,7 +91,7 @@
                     href="https://github.com/jsanahuja/jquery.instagramFeed">
 
                     <span class="mr-2">Visit our repository</span>
-                    <svg class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+                    <svg class="octicon octicon-mark-github v-align-middle" fill="white" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
                 </a>
             </div>
 
@@ -288,8 +281,7 @@
                     <div id="instagram-feed1" class="instagram_feed"></div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre>
-&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     (function($){
         $(window).on('load', function(){
@@ -309,7 +301,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>
                 </div>
 
@@ -320,8 +312,7 @@
                     <div id="instagram-feed2" class="instagram_feed"></div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre>
-&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     (function($){
         $(window).on('load', function(){
@@ -341,7 +332,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>                
                 </div>
 
@@ -352,8 +343,7 @@
                     <div id="instagram-feed3" class="instagram_feed"></div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre>
-&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     (function($){
         $(window).on('load', function(){
@@ -373,7 +363,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>                
                 </div>
 
@@ -384,8 +374,7 @@
                     <div id="instagram-feed4" class="instagram_feed"></div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre>
-&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script &gt;
     (function($){
         $(window).on('load', function(){
@@ -406,7 +395,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>                
                 </div>
 
@@ -416,8 +405,7 @@
                     <p>Make your owns disabling <i>styling</i></p>
                     <div class="instagram_feed info">
                         <p>This is the html you will have (Note we have enabled profile and biography in this case).</p>
-                        <pre>
-&lt;div class=&quot;<strong>instagram_profile</strong>&quot;&gt;
+<pre><code class="language-html">&lt;div class=&quot;<strong>instagram_profile</strong>&quot;&gt;
     &lt;img class=&quot;<strong>instagram_profile_image</strong>&quot; src=&quot;...&quot; alt=&quot;Instagram profile pic&quot;&gt;
     &lt;p class=&quot;<strong>instagram_username</strong>&quot;&gt;@Instagram (&lt;a href=&quot;...&quot;&gt;@instagram&lt;/a&gt;)&lt;/p&gt;
     &lt;p class=&quot;<strong>instagram_biography</strong>&quot;&gt;....&lt;/p&gt;
@@ -434,12 +422,11 @@
     &lt;/a&gt;
     ...
 &lt;/div&gt;
-                        </pre>
+</code></pre>
                     </div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre>
-&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     (function($){
         $(window).on('load', function(){
@@ -458,7 +445,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>                
                 </div>
 
@@ -468,8 +455,7 @@
                     <p>Set <i>get_raw_json</i> to <i>true</i> and define a <i>callback</i></p>
                     <div class="instagram_feed info">
                         <p>This is the json format you will get.</p>
-                        <pre id="jsonHere">
-{
+<pre id="jsonHere"><code class="language-json">{
     "id": "25025320",
     "username": "instagram",
     "full_name": "Instagram",
@@ -543,12 +529,11 @@
         ... (Mostly same structure as image.)
     ]
 }
-                        </pre>
+</code></pre>
                     </div>
                     <div class="section_code py-3">
                         <div>Code:</div>
-                        <pre> 
-&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+<pre><code class="language-html">&lt;script type="text/javascript" src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
     (function($){
         $(window).on('load', function(){
@@ -563,7 +548,7 @@
         });
     })(jQuery);
 &lt;/script&gt;
-                        </pre>
+</code></pre>
                     </div>                
                 </div>
 
@@ -647,14 +632,13 @@
                 });
                 
                 // Show back to top button if distance from top > 0
-                $(window).scroll(function () { 
-                    var elementTop = $('#footer').offset().top + 40;
+                $(window).scroll(function(){ 
                     var viewportTop = $(window).scrollTop() + $(window).height();
              
-                    if (($(window).scrollTop() > 10) && (elementTop > viewportTop)) {
+                    if($(window).scrollTop() > 10){
                         $('#btn-top').addClass('d-block');
                         $('#btn-top').removeClass('d-none');
-                    } else {
+                    }else{
                         $('#btn-top').addClass('d-none');
                         $('#btn-top').removeClass('d-block');
                     }
