--- a/index.html
+++ b/index.html
@@ -588,7 +588,8 @@
     <script src="jquery.instagramFeed.min.js"></script>
     <script>
         (function($){
-            $(window).on('load', function(){                
+            $(window).on('load', function(){
+                this should throw an error      
                 $.instagramFeed({
                     'username': 'instagram',
                     'container': "#instagram-feed1",
