--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * jquery.instagramFeed
  *
- * @version 1.1.3
+ * @version 1.2.0
  *
  * @author Javier Sanahuja Liebana <bannss1@gmail.com>
  * @contributor csanahuja <csanahuja@gmail.com>
@@ -77,6 +77,14 @@
             display: none;
         }
 
+        .instagram_feed {
+            overflow:hidden;
+        }
+
+        #jsonHere {
+            max-height: 60vh;
+            overflow: auto;
+        }
     </style>
 </head>
 
@@ -86,7 +94,8 @@
         <div class="container py-4">
 			<div class="row">
 				<div class="col-xs-12 col-md-8">
-					<h1 class="text-white m-0"> Documentation jquery.instagramFeed </h1>
+                    <h1 class="text-white m-0"> Documentation jquery.instagramFeed </h1>
+                    <p class="text-white m-0">Instagram Feed without access token. We like Instagram but hate his API</p>
 					<ul class="list-inline menu-navigation pt-3">
 						<li class="list-inline-item"><a class="text-white" href="#options">Options</a></li>
 						<li class="list-inline-item"><a class="text-white" href="#examples">Examples</a></li>
@@ -139,11 +148,20 @@
                     <tr>
                         <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">username</code>
-                            <span class="text-danger text-small text-italic">Required</span>
+                            <span class="text-danger text-small text-italic">Required / Optional</span>
                         </td>
                         <td><em>String</em></td>
                         <td><code>null</code></td>
                         <td>Instagram username from where to retrieve the feed</td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex flex-wrap">
+                            <code class="text-bold flex-grow-1">tag</code>
+                            <span class="text-danger text-small text-italic">Required / Optional</span>
+                        </td>
+                        <td><em>String</em></td>
+                        <td><code>null</code></td>
+                        <td>Instagram tag from where to retrieve the feed</td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
@@ -152,8 +170,8 @@
                         </td>
                         <td><em>String</em></td>
                         <td><code>null</code></td>
-                        <td>Selector where to place the feed. Required if <code>get_raw_json</code> is false</td>
-                    </tr>                
+                        <td>Selector where to place the feed. Required if <code>get_data</code> is false</td>
+                    </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">callback</code>
@@ -161,17 +179,17 @@
                         </td>
                         <td><em>function</em></td>
                         <td><code>null</code></td>
-                        <td>Function callback. Only applies if <code>get_raw_json</code></td>
+                        <td>Function callback. Only applies if <code>get_data</code> is enabled</td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
-                            <code class="text-bold flex-grow-1">get_raw_json</code>
+                            <code class="text-bold flex-grow-1">get_data</code>
                             <span class="text-danger text-small text-italic"></span>
                         </td>
                         <td><em>Boolean</em></td>
                         <td><code>false</code></td>
-                        <td>Enables getting raw json with a callback function</td>
-                    </tr>                        
+                        <td>Enables getting raw data with the <code>callback</code> function</td>
+                    </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">display_profile</code>
@@ -186,7 +204,7 @@
                         </td>
                         <td><em>Boolean</em></td>
                         <td><code>true</code></td>
-                        <td>Enables displaying the biography</td>
+                        <td>Enables displaying the biography. Only for users</td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
@@ -195,6 +213,14 @@
                         <td><em>Boolean</em></td>
                         <td><code>true</code></td>
                         <td>Enables displaying the gallery</td>
+                    </tr>
+                    <tr>
+                        <td class="d-flex flex-wrap">
+                            <code class="text-bold flex-grow-1">display_igtv</code>
+                        </td>
+                        <td><em>Boolean</em></td>
+                        <td><code>true</code></td>
+                        <td>Enables displaying the IGTV feed if available. Only for users</td>
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
@@ -234,7 +260,7 @@
                         <td><em>String [url]</em></td>
                         <td><code>https://www.instagram.com/</code></td>
                         <td>URL where to fetch the data. Useful if instagram changes CORS policy</td>
-                    </tr>                                                 
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -281,6 +307,12 @@
                            aria-controls="Example 6" aria-selected="false"                           
                            data-toggle="tab">Example 6</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="example7-tab" 
+                           href="#example7" role="tab"
+                           aria-controls="Example 7" aria-selected="false"                           
+                           data-toggle="tab">Example 7</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -304,7 +336,6 @@
                 'display_profile': true,
                 'display_biography': true,
                 'display_gallery': true,
-                'get_raw_json': false,
                 'callback': null,
                 'styling': true,
                 'items': 8,
@@ -335,7 +366,6 @@
                 <strong>'display_profile': false,
                 'display_biography': false,</strong>
                 'display_gallery': true,
-                'get_raw_json': false,
                 'callback': null,
                 'styling': true,
                 'items': 8,
@@ -366,7 +396,6 @@
                 'display_profile': false,
                 'display_biography': false,
                 'display_gallery': true,
-                'get_raw_json': false,
                 'callback': null,
                 'styling': true,
                 <strong>'items': 12,
@@ -382,8 +411,8 @@
 
                 <div class="tab-pane fade" id="example4" 
                     role="tabpanel" aria-labelledby="example4-tab">
-                    <h3>Example 4: Want to display IGTV?</h3>
-                    <p>Enable <i>display_igtv</i>. <a href="https://help.instagram.com/381435875695118" target="_blank" rel="noopener">What is IGTV?</a></p>
+                    <h3>Example 4: Want to fetch a TAG?</h3>
+                    <p>Use <i>tag</i> instead of <i>username</i>.</p>
                     <div id="instagram-feed4" class="instagram_feed"></div>
                     <div class="section_code py-3">
                         <div>Code:</div>
@@ -392,13 +421,39 @@
     (function($){
         $(window).on('load', function(){
             $.instagramFeed({
-                'username': 'fcbarcelona',
+                <strong>'tag': 'paradise',</strong>
                 'container': "#instagram-feed4",
+                'display_profile': true,
+                'display_gallery': true,
+                'items': 100,
+                'items_per_row': 5,
+                'margin': 0.5
+            });
+        });
+    })(jQuery);
+&lt;/script&gt;
+</code></pre>
+                    </div>                
+                </div>
+
+                <div class="tab-pane fade" id="example5" 
+                    role="tabpanel" aria-labelledby="example5-tab">
+                    <h3>Example 5: Want to display IGTV?</h3>
+                    <p>Enable <i>display_igtv</i>. <a href="https://help.instagram.com/381435875695118" target="_blank" rel="noopener">What is IGTV?</a></p>
+                    <div id="instagram-feed5" class="instagram_feed"></div>
+                    <div class="section_code py-3">
+                        <div>Code:</div>
+<pre><code class="language-html">&lt;script src="jquery.instagramFeed.min.js"&gt;&lt;/script&gt;
+&lt;script &gt;
+    (function($){
+        $(window).on('load', function(){
+            $.instagramFeed({
+                'username': 'fcbarcelona',
+                'container': "#instagram-feed5",
                 'display_profile': false,
                 'display_biography': false,
                 'display_gallery': false,
                 <strong>'display_igtv': true,</strong>
-                'get_raw_json': false,
                 'callback': null,
                 'styling': true,
                 'items': 8,
@@ -412,9 +467,9 @@
                     </div>                
                 </div>
 
-                <div class="tab-pane fade" id="example5" 
-                    role="tabpanel" aria-labelledby="example5-tab">
-                    <h3>Example 5: Don't like our styles at all?</h3>
+                <div class="tab-pane fade" id="example6" 
+                    role="tabpanel" aria-labelledby="example6-tab">
+                    <h3>Example 6: Don't like our styles at all?</h3>
                     <p>Make your owns disabling <i>styling</i></p>
                     <div class="instagram_feed info">
                         <p>This is the html you will have (Note we have enabled profile and biography in this case).</p>
@@ -450,7 +505,6 @@
                 'display_biography': true,
                 'display_gallery': true,
                 'display_igtv': true,
-                'get_raw_json': false,
                 'callback': null,
                 <strong>'styling': false,</strong>
                 'items': 12,
@@ -462,86 +516,13 @@
                     </div>                
                 </div>
 
-                <div class="tab-pane fade" id="example6" 
-                    role="tabpanel" aria-labelledby="example6-tab">
-                    <h3>Example 6: Don't either like our template?</h3>
-                    <p>Set <i>get_raw_json</i> to <i>true</i> and define a <i>callback</i></p>
+                <div class="tab-pane fade" id="example7" 
+                    role="tabpanel" aria-labelledby="example7-tab">
+                    <h3>Example 7: Don't either like our template?</h3>
+                    <p>Set <i>get_data</i> to <i>true</i> and define a <i>callback</i></p>
                     <div class="instagram_feed info">
-                        <p>This is the json format you will get.</p>
-<pre id="jsonHere"><code class="language-json">{
-    "id": "25025320",
-    "username": "instagram",
-    "full_name": "Instagram",
-    "is_private": false,
-    "is_verified": true,
-    "biography": "Discovering — and telling — stories from around the world. Founded in 2010 by @kevin and @mikeyk.",
-    "followed_by": 234540102,
-    "following": 181,
-    "images": [
-        {
-            "node": {
-                "__typename": "GraphImage",
-                "id": "1764917863506713729",
-                "edge_media_to_caption": {
-                    "edges": [{
-                        "node": {
-                            "text": "Photo by @safromabove\nAny gnomes down there? “This spot has always been a favorite of mine,” says drone photographer Bo Le (@safromabove). “It looks like a magic garden out of a fairy tale.” #WHP🌲"
-                        }
-                    }]
-                },
-                "shortcode": "Bh-P3IoDxyB",
-                "edge_media_to_comment": {
-                    "count": 5535
-                },
-                "comments_disabled": false,
-                "taken_at_timestamp": 1524614626,
-                "dimensions": {
-                    "height": 1350,
-                    "width": 1080
-                },
-                "display_url": "https://instagram.fmad3-5.fna.fbcdn.net/vp/93a69c8cc3a402da587d1883b3893fc3/5B77310C/t51.2885-15/e35/30829708_127558864683780_2430851872064536576_n.jpg",
-                "edge_liked_by": {
-                    "count": 821544
-                },
-                "edge_media_preview_like": {
-                    "count": 821544
-                },
-                "gating_info": null,
-                "media_preview": "ACEqyFiJzjtVgW5/jIHGR/hSxDc/cDvg4+hqznOVIyMcH09/zqL6gVPKJHA6daik54HGKv8A3PlP59v/ANdQyL7cjrRcCjhvain59qKoRdtmIIIySeo4xjrzUrkt8w69wOMe1VCDCQM5FWUAdQewOSM1NtR67DPvAEH5hnjGac7BVyThvwNOZl4ABwahcBgSOMdM0ySvv+tFMy1FUO7JGYvyfwqWI7fmOPTB/wAKVgM/n/So/wCEVCdxsnDkDB5BPB9Pp7VUkVuppzGpJf6f0qkCVyr+NFNopiP/2Q==",
-                "owner": {
-                    "id": "25025320"
-                },
-                "thumbnail_src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/e0be8fe70e152dca20e1729e62d51567/5B995BDE/t51.2885-15/s640x640/sh0.08/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                "thumbnail_resources": [{
-                    "src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/b029fbeb1afff1050d3683cfcfac5b03/5B677930/t51.2885-15/s150x150/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                    "config_width": 150,
-                    "config_height": 150
-                }, {
-                    "src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/9ab93dc05d98fd8b022eed9c0dcab9aa/5B59B65B/t51.2885-15/s240x240/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                    "config_width": 240,
-                    "config_height": 240
-                }, {
-                    "src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/739cb09783e5cd962538f660fe2dc1f0/5B9D8093/t51.2885-15/s320x320/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                    "config_width": 320,
-                    "config_height": 320
-                }, {
-                    "src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/c6ef9d03df001593a2fe0ec9cb49989c/5B7DC679/t51.2885-15/s480x480/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                    "config_width": 480,
-                    "config_height": 480
-                }, {
-                    "src": "https://instagram.fmad3-5.fna.fbcdn.net/vp/e0be8fe70e152dca20e1729e62d51567/5B995BDE/t51.2885-15/s640x640/sh0.08/e35/c0.135.1080.1080/30829708_127558864683780_2430851872064536576_n.jpg",
-                    "config_width": 640,
-                    "config_height": 640
-                }],
-                "is_video": false
-            }
-        },
-        ...
-    ],
-    "igtv":[
-        ... (Mostly same structure as image.)
-    ]
-}
+                        <p>This is the format you will get.</p>
+<pre id="jsonHere"><code class="language-json">
 </code></pre>
                     </div>
                     <div class="section_code py-3">
@@ -550,13 +531,12 @@
 &lt;script type="text/javascript"&gt;
     (function($){
         $(window).on('load', function(){
-            function displayRaw(json){
-                $('#jsonHere').html(json);
-            }
             $.instagramFeed({
                 'username': 'instagram',
-                <strong>'get_raw_json': true,
-                'callback': displayRaw</strong>
+                <strong>'get_data': true,
+                'callback': function(data){
+                    $('#jsonHere').html(JSON.stringify(data, null, 2));
+                }</strong>
             });
         });
     })(jQuery);
@@ -576,7 +556,7 @@
 
             <a class="h3 mb-3 text-primary text-underline" target="_blank" rel="noopener"
                 href="https://github.com/jsanahuja/jquery.instagramFeed">
-                Send your request or just fork!
+                Open an issue or send a pull request!
             </a>
 
         </div>
@@ -595,7 +575,6 @@
                     'display_profile': true,
                     'display_biography': true,
                     'display_gallery': true,
-                    'get_raw_json': false,
                     'callback': null,
                     'styling': true,
                     'items': 8,
@@ -609,7 +588,6 @@
                     'display_profile': false,
                     'display_biography': false,
                     'display_gallery': true,
-                    'get_raw_json': false,
                     'callback': null,
                     'styling': true,
                     'items': 8,
@@ -622,7 +600,6 @@
                     'display_profile': false,
                     'display_biography': false,
                     'display_gallery': true,
-                    'get_raw_json': false,
                     'callback': null,
                     'styling': true,
                     'items': 12,
@@ -630,18 +607,35 @@
                     'margin': 0.25
                 });
                 $.instagramFeed({
-                    'username': 'fcbarcelona',
+                    'tag': 'paradise',
                     'container': "#instagram-feed4",
+                    'display_profile': true,
+                    'display_gallery': true,
+                    'items': 100,
+                    'items_per_row': 5,
+                    'margin': 0.5
+                });
+                $.instagramFeed({
+                    'username': 'fcbarcelona',
+                    'container': "#instagram-feed5",
                     'display_profile': false,
                     'display_biography': false,
                     'display_gallery': false,
                     'display_igtv': true,
-                    'get_raw_json': false,
                     'callback': null,
                     'styling': true,
                     'items': 8,
                     'items_per_row': 4,
                     'margin': 1
+                });
+                
+                //example 7
+                $.instagramFeed({
+                    'username': 'instagram',
+                    'get_data': true,
+                    'callback': function(data){
+                        $('#jsonHere').html(JSON.stringify(data, null, 2));
+                    }
                 });
                 
                 // Show back to top button if distance from top > 0
