--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!--
  * jquery.instagramFeed
  *
- * @version 1.2.6
+ * @version 1.2.7
  *
  * @author Javier Sanahuja Liebana <bannss1@gmail.com>
- * @contributor csanahuja <csanahuja@gmail.com>
+ * @contributor csanahuja <csanahuja10@gmail.com>
  *
  * https://github.com/jsanahuja/jquery.instagramFeed
  *
