--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * jquery.instagramFeed
  *
- * @version 1.3.0
+ * @version 1.3.1
  *
  * @author Javier Sanahuja Liebana <bannss1@gmail.com>
  * @contributor csanahuja <csanahuja10@gmail.com>
@@ -245,6 +245,14 @@
                     </tr>
                     <tr>
                         <td class="d-flex flex-wrap">
+                            <code class="text-bold flex-grow-1">lazy_load</code>
+                        </td>
+                        <td><em>Boolean</em></td>
+                        <td><code>false</code></td>
+                        <td>Enable lazy load of images using native web attribute loading="lazy" on img elements</td>
+                    </tr>                    
+                    <tr>
+                        <td class="d-flex flex-wrap">
                             <code class="text-bold flex-grow-1">margin</code>
                         </td>
                         <td><em>number [Float]</em></td>
@@ -345,7 +353,8 @@
                 'styling': true,
                 'items': 8,
                 'items_per_row': 4,
-                'margin': 1 
+                'margin': 1,
+                'lazy_load': true 
             });
         });
     })(jQuery);
